[gd_scene load_steps=5 format=3 uid="uid://1ynaul3jtc7g"]

[ext_resource type="Script" path="res://player.gd" id="1_5g88w"]
[ext_resource type="PackedScene" uid="uid://2n5u0yi6cls4" path="res://game_character.glb" id="2_6c5q2"]
[ext_resource type="Script" path="res://game_character.gd" id="3_gh2kf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r2ep2"]
radius = 0.761141
height = 3.08678

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59891, 0)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_5g88w")

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0.235777, 0)
shape = SubResource("CapsuleShape3D_r2ep2")

[node name="PlayerMesh" parent="PlayerCollision" instance=ExtResource("2_6c5q2")]
transform = Transform3D(0.833333, 0, 0, 0, 0.833333, 0, 0, 0, 0.833333, 0, -1.6335, 0)
script = ExtResource("3_gh2kf")

[node name="RayCastPickup" type="RayCast3D" parent="PlayerCollision/PlayerMesh"]
transform = Transform3D(0.141421, 0, -0.141421, 0, 0.2, 0, 0.141421, 0, 0.141421, 0, 0.650319, 0)
target_position = Vector3(5, 0, 5)
collision_mask = 4
